# personal-book-library

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/tests/: conftest.py  test_api.py  test_health.py
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/lib/: api.ts  sample-data.ts
