[project]
name = "personal-book-library-backend"
version = "0.1.0"
description = "Backend API for the Personal Book Library project."
readme = "../README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.116.1",
    "sqlalchemy==2.0.41",
    "psycopg[binary]==3.2.12",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
]

[tool.uv]
package = false
